--- a/index.html
+++ b/index.html
@@ -181,16 +181,11 @@
   </div>
 </template>
 
-
 <script>
     var fireballSize = 22;
 
     function getFireballSpeed(isHeadWind) {
-        if (!isHeadWind) {
-            return 5;
-        }
-
-        return 2;
+        return isHeadWind ? 2 : 5;
     }
 
     var wizardWidth = 70;
@@ -210,45 +205,7 @@
     }
 </script>
 
-
 <script src="js/game.js"></script>
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
